# OneAPI339

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FRANK.txt  README.md  WOTW.txt  setvars.sh
src/parallel/: CMakeLists.txt  word_cloud_parallel.cpp
src/serial/: CMakeLists.txt  word_cloud_serial.cpp
